# gmail-cli

./: Cargo.toml
src/: google_api.rs  main.rs  tui.rs
