[package]
name = "gmail-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI and Async
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Text processing
unicode-segmentation = "1.10"
regex = "1.10"
once_cell = "1.19"

# Google API Interaction
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4"
url = "2"

# Configuration (Optional but Recommended)
dirs = "5.0"
toml = "0.8"

# Optional features
arboard = "3.3"

[profile.release]
codegen-units = 1
lto = true