[package]
name = "gmail-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Google API Interaction
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
oauth2 = "4"
url = "2"
dirs = "5.0"
base64 = "0.22"
html2text = "0.6"